--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -1,5 +1,6 @@
 $font-weight-400: 400;
 $font-weight-700: 700;
+$font-weight-500: 500;
 $color-yellow: #FCD043;
 $color-white: #FFFCF6;
 $color-dark-green: #313F38;
