--- a/style/style-page-1/style-page-1.scss
+++ b/style/style-page-1/style-page-1.scss
@@ -5,8 +5,6 @@
   margin: 0 auto;
   padding: 0;
   max-width: 1920px;
- 
-
 }
 
 %font-style-hd-container{
@@ -665,7 +663,9 @@ align-items: center;
 
 
 
-
+.container {
+  width: 100vw;
+}
 
 .best-apartments {
   background-image: url(/assets/img/img-page-1/img-bedroom-grey.png);
@@ -686,6 +686,7 @@ align-items: center;
   margin-left: 31px;
   margin-bottom: 250px;
   width: 872px;
+  font-family: $font-Miracle;
 }
 
 .best-apartments__text {
@@ -699,7 +700,9 @@ align-items: center;
 
 
 
-
+.container {
+  width: 100vw;
+}
 
 
 
@@ -707,16 +710,19 @@ align-items: center;
 .our-gallery {
   background-color: $color-dark-green;
   height: 2460px;
+  width: 100%;               //here
   display: grid;
-  grid-template-columns: 1fr 1.8fr 1fr;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 17% 4% 58% 4% 17%; //16% 4% 60% 4% 16%; 
+  grid-template-rows: repeat(5, max-content);
+  /*grid-template-columns: 20em 60em 20em; /*20% 60% 20%;*/
+  /*grid-template-rows: repeat(4, minmax(100px, auto));*/
 }
 
 .our-gallery__text-element-left {
+  margin-left: 6%;
   height: 62px;
-  width: 255px;
-  margin-bottom: 273px;
-  padding-top: 323px;
+  width: 94%;
+  padding-top: 13em;
   color: $color-white;
   @extend%middle-elements;
   grid-area: 1 / 1 / 2 / 2;
@@ -724,63 +730,85 @@ align-items: center;
 }
 
 .our-gallery__center-section {
-  margin-left: 173px;
-  margin-right: 173px;
+  margin-left: 1%;
+  margin-right: 1%;
   height: 1424px;
-  width: 950px;
-  justify-self: center;
-  grid-area: 1 / 2 / 5 / 3;
+  /*width: 950px;*/
+  grid-area: 1 / 3 / 6 / 4;
+  justify-items: center;
 }
 
 .our-gallery__logo {
   height: 107px;
   width: 150px;
-  padding-top: 299.94px;
+  padding-top: 18em;
   display: block;
-  justify-self: center;
+}
+.our-gallery__img-logo {
+  width: 100%;
 }
 
 .our-gallery__title {
   @extend%major-title;
   color: $color-yellow;
-  margin-top: 50.17px;
-  margin-bottom: 70px;
+  margin-top: 0.35em;
+  margin-bottom: 0.4em;
   text-transform: uppercase;
   text-align: center;
 }
 
-.our-gallery__img-bench {
+.our-gallery__bench {
+  margin-top: 16em;
   margin-bottom: 342px;
   grid-area: 2 / 1 / 3 / 2;
-  width: 312px;
+  /*width: 312px;*/
   height: 284px;
   margin-left: 0;
 }
 
+.our-gallery__img-bench {
+  width: 100%;
+  height: 100%;
+}
 
 .our-gallery__text-element {
   @extend%text-elements;
   width: 450px;
   height: 112px;
-  margin-bottom: 150px;
+  margin-bottom: 9em;
   text-align: center;
   color: $color-white;
 }
 
+.our-gallery__lobby {
+  margin-top: 16em;
+  margin-right: 0;
+  /*width: 312px;*/
+  height: 400px;
+  grid-area: 2 / 5 / 3 / 6;
+}
 
 .our-gallery__img-lobby {
-  width: 312px;
-  height: 400px;
-  grid-area: 2 / 3 / 3 / 4;
+  width: 100%;
+  height: 100%;
 }
 
 .our-gallery__fireplace {
+  /*margin-left: 2%;
+  margin-right: 2%;*/
+  display: flex;
   height: 600px;
-  width: 916px;
+  justify-content: center;
+  /*width: 916px;*/
+}
+
+.our-gallery__img-fireplace {
+  width: 98%;
+
 }
 
 .our-gallery__octagon-text {
-margin-top: 100px;
+margin-top: 6em;
 display: flex;
 }
 
@@ -801,47 +829,118 @@ display: flex;
   color: $color-white;
   height: 52px;
   width: 350px;
-  /*display: inline-block;*/
 }
 
-
 .our-gallery__dining-area {
+  /*height: 394px;*/
+  margin-left: 4%;
   height: 394px;
-  width: 316px;
-  grid-area: 3 / 1 / 4 / 2;
+  grid-area: 4 / 1 / 5 / 2;
+}
+
+.our-gallery__img-dining-area {
+  width: 96%;
+  height: 100%;
 }
 
 .our-gallery__bathroom-mirror {
-  margin-top: 414px;
-  grid-area: 3 / 3 / 4 / 4;
+  margin-top: 23em;  //414px;
+  margin-right: 0;
+  height: 284px;
+  /*width: 443px;*/
+  grid-area: 4 / 4 / 5 / 6;
+}
+
+.our-gallery__img-bathroom-mirror {
+  width: 100%;
+  position: relative;
+  z-index: 2;
 }
 
 .our-gallery__background-text {
-  font-family: "Miracle";
-  font-size: 120px;
-  font-weight: $font-weight-400;
-  line-height: 140px;
-  letter-spacing: 0em;
-  text-align: left;
-  grid-area: 4 / 1 / 5 / 4;
-  color: $color-white;
+  grid-area: 5 / 1 / 6 / 6;
+}
+.our-gallery__background-text-img {
+  width: 100%;
   position: relative;
-  top: -70px;
-  left: -328px;
-  opacity: 12%;
-
-  /*font-family: Helvetica;
-  font-size: 120px;
-  font-weight: 300;
-  line-height: 140px;
-  letter-spacing: 0em;
-  text-align: left;*/
+  top: -8em;  //-1em
+  left: -0.08em;  //-193px;
+  display: flex;
+  z-index: 1;
 }
 
-/*.our-gallery__background-text-visible {
-  opacity: 100%;
-}*/
+.footer {
+  height: 2277px;
+}
 
-.our-gallery__background-text:nth-child(2) {
-  opacity: 100%;
+.footer__get-in-touch {
+  margin: 1%;
+  padding-top: 300px;
+  display: grid;
+  grid-template-columns: 47% 18% 28% 7%;
+  grid-template-rows: 20% 20% 35% 25%;
+}
+
+.footer__phone-number {
+  margin:0;
+  font-family: $font-Helvetica;
+  font-weight: $font-weight-400;
+  font-size: 80px;
+  line-height: 80px;
+  color: $color-nordic-green;
+  width: 671px;
+  height: 80px;
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.footer__address {
+  @extend%middle-elements;
+  height: 62px;
+  width: 284px;
+  margin:0;
+  color: $color-nordic-green;
+  grid-area: 2 / 3 / 3 / 4;
+}
+
+.footer__get-in {
+  margin:0;
+  font-family: $font-Miracle;
+  font-size: 240px;              //300px
+  font-weight: $font-weight-400;
+  line-height: 300px;
+  color: $color-nordic-green;
+  height: 300;
+  grid-area: 3 / 1 / 4 / 2;
+  text-transform: uppercase;
+}
+
+.footer__touch {
+  grid-area: 4 / 2 / 5 / 4;
+  font-family: $font-Miracle;
+  font-size: 240px;              //300px
+  font-weight: $font-weight-400;
+  line-height: 300px;
+  height: 300px;
+  position: relative;
+  top: -15px;
+  left: -60px;
+  color: $color-yellow;
+  text-transform: uppercase;
+}
+
+.footer__star {
+  width: 150px;
+  height: 150px;
+  grid-area: 3 / 2 / 4 / 3;
+  align-self: center;
+  justify-self: start;
+}
+
+.footer__couch {
+  width: 443px;
+  grid-area: 3 / 3 / 5 / 4;
+}
+
+.footer__img-couch {
+  width: 80%;
 }
