--- a/style/style-page-1/style-page-1.css
+++ b/style/style-page-1/style-page-1.css
@@ -17,6 +17,27 @@
   font-family: Helvetica;
   src: url("/assets/fonts/Helvetica-neue-lt-std/Helvetica-bold.otf");
 }
+.our-gallery__title, .best-apartments__title {
+  font-family: "Miracle";
+  font-weight: 400;
+  font-size: 9em;
+  line-height: 1em;
+}
+
+.our-gallery__text-element {
+  font-family: Helvetica;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.footer__address, .our-gallery__text-element-left, .best-apartments__text {
+  font-family: Helvetica;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 31.2px;
+}
+
 * {
   margin: 0 auto;
   padding: 0;
@@ -635,4 +656,257 @@
 
 .container {
   width: 100vw;
+}
+
+.best-apartments {
+  background-image: url(/assets/img/img-page-1/img-bedroom-grey.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 1080px;
+}
+
+.best-apartments__img {
+  margin-top: 200px;
+}
+
+.best-apartments__title {
+  color: #FCD043;
+  text-transform: uppercase;
+  padding-top: 100px;
+  margin-left: 31px;
+  margin-bottom: 250px;
+  width: 872px;
+  font-family: "Miracle";
+}
+
+.best-apartments__text {
+  color: #FCD043;
+  text-transform: uppercase;
+  margin-left: 31px;
+  width: 440px;
+}
+
+.our-gallery {
+  background-color: #313F38;
+  height: 2460px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 17% 4% 58% 4% 17%;
+  grid-template-rows: repeat(5, max-content);
+}
+
+.our-gallery__text-element-left {
+  margin-left: 6%;
+  height: 62px;
+  width: 94%;
+  padding-top: 13em;
+  color: #FFFCF6;
+  grid-area: 1/1/2/2;
+  text-transform: uppercase;
+}
+
+.our-gallery__center-section {
+  margin-left: 1%;
+  margin-right: 1%;
+  height: 1424px;
+  grid-area: 1/3/6/4;
+  justify-items: center;
+}
+
+.our-gallery__logo {
+  height: 107px;
+  width: 150px;
+  padding-top: 18em;
+  display: block;
+}
+
+.our-gallery__img-logo {
+  width: 100%;
+}
+
+.our-gallery__title {
+  color: #FCD043;
+  margin-top: 0.35em;
+  margin-bottom: 0.4em;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.our-gallery__bench {
+  margin-top: 16em;
+  margin-bottom: 342px;
+  grid-area: 2/1/3/2;
+  height: 284px;
+  margin-left: 0;
+}
+
+.our-gallery__img-bench {
+  width: 100%;
+  height: 100%;
+}
+
+.our-gallery__text-element {
+  width: 450px;
+  height: 112px;
+  margin-bottom: 9em;
+  text-align: center;
+  color: #FFFCF6;
+}
+
+.our-gallery__lobby {
+  margin-top: 16em;
+  margin-right: 0;
+  height: 400px;
+  grid-area: 2/5/3/6;
+}
+
+.our-gallery__img-lobby {
+  width: 100%;
+  height: 100%;
+}
+
+.our-gallery__fireplace {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+}
+
+.our-gallery__img-fireplace {
+  width: 98%;
+}
+
+.our-gallery__octagon-text {
+  margin-top: 6em;
+  display: flex;
+}
+
+.our-gallery__label-octagon-yellow {
+  margin: 0;
+  height: 50px;
+  width: 50px;
+  align-self: center;
+}
+
+.our-gallery__text-element-near-octagon {
+  margin-left: 30px;
+  font-family: Helvetica;
+  font-size: 22px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 26px;
+  color: #FFFCF6;
+  height: 52px;
+  width: 350px;
+}
+
+.our-gallery__dining-area {
+  margin-left: 4%;
+  height: 394px;
+  grid-area: 4/1/5/2;
+}
+
+.our-gallery__img-dining-area {
+  width: 96%;
+  height: 100%;
+}
+
+.our-gallery__bathroom-mirror {
+  margin-top: 23em;
+  margin-right: 0;
+  height: 284px;
+  grid-area: 4/4/5/6;
+}
+
+.our-gallery__img-bathroom-mirror {
+  width: 100%;
+  position: relative;
+  z-index: 2;
+}
+
+.our-gallery__background-text {
+  grid-area: 5/1/6/6;
+}
+
+.our-gallery__background-text-img {
+  width: 100%;
+  position: relative;
+  top: -8em;
+  left: -0.08em;
+  display: flex;
+  z-index: 1;
+}
+
+.footer {
+  height: 2277px;
+}
+
+.footer__get-in-touch {
+  margin: 1%;
+  padding-top: 300px;
+  display: grid;
+  grid-template-columns: 47% 18% 28% 7%;
+  grid-template-rows: 20% 20% 35% 25%;
+}
+
+.footer__phone-number {
+  margin: 0;
+  font-family: Helvetica;
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 80px;
+  color: #1B3B36;
+  width: 671px;
+  height: 80px;
+  grid-area: 1/1/2/2;
+}
+
+.footer__address {
+  height: 62px;
+  width: 284px;
+  margin: 0;
+  color: #1B3B36;
+  grid-area: 2/3/3/4;
+}
+
+.footer__get-in {
+  margin: 0;
+  font-family: "Miracle";
+  font-size: 240px;
+  font-weight: 400;
+  line-height: 300px;
+  color: #1B3B36;
+  height: 300;
+  grid-area: 3/1/4/2;
+  text-transform: uppercase;
+}
+
+.footer__touch {
+  grid-area: 4/2/5/4;
+  font-family: "Miracle";
+  font-size: 240px;
+  font-weight: 400;
+  line-height: 300px;
+  height: 300px;
+  position: relative;
+  top: -15px;
+  left: -60px;
+  color: #FCD043;
+  text-transform: uppercase;
+}
+
+.footer__star {
+  width: 150px;
+  height: 150px;
+  grid-area: 3/2/4/3;
+  align-self: center;
+  justify-self: start;
+}
+
+.footer__couch {
+  width: 443px;
+  grid-area: 3/3/5/4;
+}
+
+.footer__img-couch {
+  width: 80%;
 }/*# sourceMappingURL=style-page-1.css.map */
