--- a/style/style-page-1/style-page-1.scss
+++ b/style/style-page-1/style-page-1.scss
@@ -697,25 +697,13 @@ align-items: center;
   width: 440px;
 }
 
-
-
-
-.container {
-  width: 100vw;
-}
-
-
-
-
 .our-gallery {
   background-color: $color-dark-green;
   height: 2460px;
-  width: 100%;               //here
+  width: 100%;
   display: grid;
-  grid-template-columns: 17% 4% 58% 4% 17%; //16% 4% 60% 4% 16%; 
+  grid-template-columns: 17% 4% 58% 4% 17%;
   grid-template-rows: repeat(5, max-content);
-  /*grid-template-columns: 20em 60em 20em; /*20% 60% 20%;*/
-  /*grid-template-rows: repeat(4, minmax(100px, auto));*/
 }
 
 .our-gallery__text-element-left {
@@ -733,7 +721,6 @@ align-items: center;
   margin-left: 1%;
   margin-right: 1%;
   height: 1424px;
-  /*width: 950px;*/
   grid-area: 1 / 3 / 6 / 4;
   justify-items: center;
 }
@@ -761,7 +748,6 @@ align-items: center;
   margin-top: 16em;
   margin-bottom: 342px;
   grid-area: 2 / 1 / 3 / 2;
-  /*width: 312px;*/
   height: 284px;
   margin-left: 0;
 }
@@ -783,7 +769,6 @@ align-items: center;
 .our-gallery__lobby {
   margin-top: 16em;
   margin-right: 0;
-  /*width: 312px;*/
   height: 400px;
   grid-area: 2 / 5 / 3 / 6;
 }
@@ -794,17 +779,13 @@ align-items: center;
 }
 
 .our-gallery__fireplace {
-  /*margin-left: 2%;
-  margin-right: 2%;*/
-  display: flex;
   height: 600px;
+  display: flex;
   justify-content: center;
-  /*width: 916px;*/
 }
 
 .our-gallery__img-fireplace {
   width: 98%;
-
 }
 
 .our-gallery__octagon-text {
@@ -832,7 +813,6 @@ display: flex;
 }
 
 .our-gallery__dining-area {
-  /*height: 394px;*/
   margin-left: 4%;
   height: 394px;
   grid-area: 4 / 1 / 5 / 2;
@@ -847,7 +827,6 @@ display: flex;
   margin-top: 23em;  //414px;
   margin-right: 0;
   height: 284px;
-  /*width: 443px;*/
   grid-area: 4 / 4 / 5 / 6;
 }
 
