everything is done

--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -5,6 +5,8 @@ $color-yellow: #FCD043;
 $color-white: #FFFCF6;
 $color-dark-green: #313F38;
 $color-nordic-green: #1B3B36;
+$font-Helvetica: Helvetica;
+$font-Miracle:"Miracle";
 
 @font-face {
   font-family: "Miracle";
